--- a/D6/simpleapp/templates/news.html
+++ b/D6/simpleapp/templates/news.html
@@ -19,7 +19,7 @@ News
            {% for post in news %}
            <tr>
                <td>{{ post.name }}</td>
-               <td>{{ post.description|currency|truncatechars:20 }}</td>
+               <td>{{ post.description|censor|truncatechars:20 }}</td>
                <td>{{ post.date|date:'h:s d M Y' }}</td>
            </tr>
            {% endfor %}
